--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react": "19.2.1",
     "react-dom": "19.2.1",
     "recharts": "^3.5.1",
+    "sonner": "^1.7.1",
     "tailwind-merge": "^3.4.0"
   },
   "devDependencies": {
