--- a/package.json
+++ b/package.json
@@ -34,10 +34,9 @@
     "react": "19.2.1",
     "react-dom": "19.2.1",
     "tailwind-merge": "^3.4.0",
-    "zustand": "^5.0.9"
+    "zustand": "^5.0.9",
     "recharts": "^3.5.1",
-    "sonner": "^1.7.1",
-    "tailwind-merge": "^3.4.0"
+    "sonner": "^1.7.1"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
