--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "recharts": "^3.5.1",
     "sonner": "^1.7.4",
     "tailwind-merge": "^3.4.0",
+    "zod": "^4.2.1",
     "zustand": "^5.0.9"
   },
   "devDependencies": {
