test: add unit tests and E2E tests with Playwright Unit tests (~176 tests): - Jest setup with TypeScript, path aliases, mocks - Tests for helpers, stores, schemas, utils E2E tests (Playwright): - Auth flow tests (login, protected routes) - playwright.config.ts with baseURL localhost:3001 Auth forms fix: - Add noValidate to use Zod validation instead of browser tooltips

--- a/.gitignore
+++ b/.gitignore
@@ -42,3 +42,11 @@ next-env.d.ts
 
 DATABASE_DESCRIPTION.txt
 DATABASE_DESIGN.txt
+
+# Playwright
+node_modules/
+/test-results/
+/playwright-report/
+/blob-report/
+/playwright/.cache/
+/playwright/.auth/
