--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@radix-ui/react-slot": "^1.2.4",
     "@radix-ui/react-switch": "^1.2.6",
     "@radix-ui/react-tabs": "^1.1.13",
+    "@react-pdf/renderer": "^4.3.1",
     "@tanstack/react-query": "^5.90.12",
     "@vercel/analytics": "^1.6.1",
     "axios": "^1.13.2",
