--- a/tsconfig.json
+++ b/tsconfig.json
@@ -38,6 +38,6 @@
     ".next/types/**/*.ts",
     ".next/dev/types/**/*.ts",
     "**/*.mts"
-  ],
+, "../proxy.ts"  ],
   "exclude": ["node_modules"]
 }
