--- a/tsconfig.json
+++ b/tsconfig.json
@@ -37,7 +37,8 @@
     "**/*.tsx",
     ".next/types/**/*.ts",
     ".next/dev/types/**/*.ts",
-    "**/*.mts"
-, "../proxy.ts"  ],
+    "**/*.mts",
+    "../proxy.ts"
+  ],
   "exclude": ["node_modules"]
 }
