--- a/tsconfig.json
+++ b/tsconfig.json
@@ -37,8 +37,7 @@
     "**/*.tsx",
     ".next/types/**/*.ts",
     ".next/dev/types/**/*.ts",
-    "**/*.mts",
-    "../proxy.ts"
-  ],
+    "**/*.mts"
+, "../proxy.ts"  ],
   "exclude": ["node_modules"]
 }
